--- a/eyowo.html
+++ b/eyowo.html
@@ -42,103 +42,34 @@
     <h1 class="sr">
         Tonye
     </h1>
-    <header class="site-header">
-        <div class="w-100 bg-branddark height-100-vh flex-dir-col al-i-c j-c-c flex-show-mediumup">
-            <nav class="d-flx j-c-sb flex-dir-col al-i-c">
-                <ul class="none d-flx j-c-c flex-dir-col h-100 al-i-c topmenu">
-                    <li class="my-h w-100">
-                        <a href="index.html" class="tx-c d-blk p-1 py-2h co-white">
-                                Home
-                        </a>
-                    </li>
-                    <li class="my-h w-100">
-                        <a href="about.html" class="tx-c d-blk p-1 py-2h co-white">
+    <header class="site-header pos-a w-100">
+        <div class="main-wrap wrapper mx-auto">
+            <nav class="d-flx j-c-sb al-i-c">
+                <a  href="index.html" class="logo-area">
+                    <p class="text-dance co-richblack">
+                        Tonye Dickson
+                    </p>
+                </a>
+                <ul class="none d-flx al-i-c topmenu">
+                    <li class="my-h">
+                        <a href="about.html" class="tx-c d-blk py-h co-richblack">
                             About
                         </a>
                     </li>
-                    <li class="my-h w-100">
-                        <a class="active tx-c d-blk p-1 py-2h co-white">
+                    <li class="my-h">
+                        <a href="work.html" class="tx-c d-blk py-h co-richblack">
                             Work
                         </a>
                     </li>
-                    <li class="my-h w-100">
-                        <a href="writing.html" class="tx-c d-blk p-1 py-2h co-white">
+                    <li class="my-h">
+                        <a href="writing.html" class="tx-c d-blk py-h co-richblack">
                             Writing
-                        </a>
-                    </li>
-                    <li class="my-h w-100">
-                        <a href="contact.html" class="tx-c d-blk p-1 py-2h co-white">
-                            Contact
                         </a>
                     </li>
                 </ul>
             </nav>
         </div>
-
-        <div class="d-flx j-c-sb fixed-on-mobile bg-bg fixed-to-top w-100 al-i-c wrapper-x py-1">
-            <a href="index.html" class="logo-area bg-bg d-flx al-i-c">
-                <div class="prefix is-wider d-flx flex-dir-col al-i-c j-c-c">
-                    <div class="back-svg pos-a">
-                        <svg width="45" height="45" viewBox="0 0 60 57" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M57.8152 4.87573C61.4291 9.52666 59.8421 18.2314 58.1608 27.439C56.4639 36.6466 54.7041 46.3727 48.0891 51.7307C41.4898 57.073 30.0667 58.0629 19.9006 54.0876C9.71887 50.0966 0.825534 41.1247 0.055616 31.9485C-0.714302 22.7724 6.6392 13.4077 14.0713 7.89255C21.5033 2.37742 28.9982 0.696173 37.1688 0.161945C45.3393 -0.372284 54.1855 0.224795 57.8152 4.87573Z" fill="#7BDCB5"/>
-                        </svg>
-                    </div>
-                    <img src="img/small-pic.png" class="small-avatar z-depth-2" alt="">
-                </div>
-                <h5 class="m-0 co-richblack">
-                    WORK
-                </h5>
-            </a>
-            <div class="nav-menu pos-r flex-hide-mediumup" onclick="showmenu(this)">
-                <div class="bar1"></div>
-                <div class="bar2"></div>
-                <div class="bar3"></div>
-                <div class="bars">
-                    <div class="d-bar-1"></div>
-                    <div class="d-bar-2"></div>
-                </div>
-            </div>
-        </div>
     </header>
-
-
-    <div class="mobile-nav wrapper-x pos-f fixed-to-top min-height-60-vh">
-        <div class="h-100 bg-white">
-            <ul class="sub-ul none tx-c">
-               <li>
-                    <a href="index.html" class="d-blk p-hh co-richblack">
-                        Home
-                    </a>
-                </li>
-                <li>
-                    <a href="about.html" class="d-blk p-hh co-richblack">
-                        About
-                    </a>
-                </li>
-                <li>
-                    <a  href="work.html" class="d-blk p-hh co-richblack">
-                        Work
-                    </a>
-                </li>
-                <li>
-                    <a href="writing.html" class="d-blk p-hh co-richblack">
-                        Writing
-                    </a>
-                </li>
-                <li>
-                    <a href="contact.html" class="d-blk p-hh co-richblack">
-                        Contact
-                    </a>
-                </li>
-            </ul>
-            <p class="px-1 pb-h co-richblack hometext">
-                This website was built with <a href="http://gatsbyjs.org" class="co-primary fw-bold">Gatsby.js</a> and is currently hosted on <a href="http://netlify.com" class="co-primary fw-bold">Netlify</a>. The source code and other assets can be found on <a href="http://github.com" class="co-primary fw-bold">Github</a>.
-            </p>
-            <p class="px-1 tx-c co-richblack hometext">
-                Copyright &copy; 2019. Copyright Dennis Dickson. All Rights Reserved.
-            </p>
-        </div>
-    </div>
 
 
 
@@ -175,6 +106,7 @@
                         <h4 class="co-primary mt-0">Project Duration</h4>
                         <p>4 - 6 Months</p>
                     </article>
+                    
                 </div>
                 <h2 class="mb-2">Communication and Process</h2>
                 <div class="grid-medium-2 pb-2">
@@ -185,6 +117,9 @@
                         </p><p>
                             Whenever needed, design assets would also be shared in the channel. For example, while working on implementing the design and assets, many of the assets I got (especially images) had to be redesigned and recreated to provide further and better optimizations before they could be used.
                         </p>
+                    </article>
+                    <article>
+                        <h4 class="sr">Eyowo Project</h4>
                         <p>
                             The designers, led by Temidayo Oluwaniyi — a very talented designer with an impeccable attention to detail, would create the assets and send them over to me via the Slack channel.
                         </p><p>
@@ -192,6 +127,11 @@
                         </p>
                     </article>
                 </div>
+                
+                <article>
+                    <h2 class="mb-2">The Result</h2>
+                    <p><a href="https://eyowo.com" class="co-primary" title="eyowo website link">https://eyowo.com</a> , <a href="https://app.eyowo.com" class="co-primary" title="eyowo web app link">https://app.eyowo.com</a></p>
+                </article>
             </div>
         </section>
     </main>
