--- a/about.html
+++ b/about.html
@@ -42,108 +42,44 @@
     <h1 class="sr">
         Tonye
     </h1>
-    <header class="site-header">
-        <div class="w-100 bg-branddark height-100-vh flex-dir-col al-i-c j-c-c flex-show-mediumup">
-            <nav class="d-flx j-c-sb flex-dir-col al-i-c">
-                <ul class="none d-flx j-c-c flex-dir-col h-100 al-i-c topmenu">
-                    <li class="my-h w-100">
-                        <a href="index.html" class="tx-c d-blk p-1 py-2h co-white">
-                                Home
-                        </a>
-                    </li>
-                    <li class="my-h w-100">
-                        <a class="tx-c d-blk p-1 active py-2h co-white">
+    <header class="site-header pos-a w-100">
+        <div class="main-wrap wrapper mx-auto">
+            <nav class="d-flx j-c-sb al-i-c">
+                <a href="index.html" class="logo-area d-flx al-i-c">
+                    <div class="prefix is-wider d-flx flex-dir-col al-i-c j-c-c">
+                        <div class="back-svg pos-a">
+                            <svg width="45" height="45" viewBox="0 0 60 54" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M53.8094 13.2771C59.433 21.3321 61.6335 31.1258 58.6995 38.067C55.7654 45.0082 47.7104 49.0833 40.3074 51.4875C32.9043 53.9054 26.1397 54.6389 18.2477 52.7508C10.3557 50.8627 1.33619 46.3394 0.140843 40.2811C-1.05451 34.2229 5.57426 26.6025 11.8634 18.398C18.1526 10.1936 24.1022 1.40504 31.6139 0.155356C39.112 -1.08075 48.1722 5.22201 53.8094 13.2771Z" fill="#F78DA7"/>
+                            </svg> 
+                        </div>
+                        <img src="img/small-pic.png" class="small-avatar z-depth-2" alt="">
+                    </div>
+                </a>
+                <ul class="none d-flx al-i-c topmenu">
+                    <li class="my-h">
+                        <a href="about.html" class="tx-c d-blk py-h co-richblack">
                             About
                         </a>
                     </li>
-                    <li class="my-h w-100">
-                        <a href="work.html" class="tx-c d-blk p-1 py-2h co-white">
+                    <li class="my-h">
+                        <a href="work.html" class="tx-c d-blk py-h co-richblack">
                             Work
                         </a>
                     </li>
-                    <li class="my-h w-100">
-                        <a href="writing.html" class="tx-c d-blk p-1 py-2h co-white">
+                    <li class="my-h">
+                        <a href="writing.html" class="tx-c d-blk py-h co-richblack">
                             Writing
-                        </a>
-                    </li>
-                    <li class="my-h w-100">
-                        <a href="contact.html" class="tx-c d-blk p-1 py-2h co-white">
-                            Contact
                         </a>
                     </li>
                 </ul>
             </nav>
         </div>
-
-        <div class="d-flx j-c-sb fixed-on-mobile bg-bg fixed-to-top w-100 al-i-c wrapper-x py-1">
-            <a href="index.html" class="logo-area d-flx al-i-c">
-                <div class="prefix is-wider d-flx flex-dir-col al-i-c j-c-c">
-                    <div class="back-svg pos-a">
-                        <svg width="45" height="45" viewBox="0 0 60 54" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M53.8094 13.2771C59.433 21.3321 61.6335 31.1258 58.6995 38.067C55.7654 45.0082 47.7104 49.0833 40.3074 51.4875C32.9043 53.9054 26.1397 54.6389 18.2477 52.7508C10.3557 50.8627 1.33619 46.3394 0.140843 40.2811C-1.05451 34.2229 5.57426 26.6025 11.8634 18.398C18.1526 10.1936 24.1022 1.40504 31.6139 0.155356C39.112 -1.08075 48.1722 5.22201 53.8094 13.2771Z" fill="#F78DA7"/>
-                        </svg> 
-                    </div>
-                    <img src="img/small-pic.png" class="small-avatar z-depth-2" alt="">
-                </div>
-                <h5 class="m-0 co-richblack">
-                    ABOUT
-                </h5>
-            </a>
-            <div class="nav-menu pos-r flex-hide-mediumup" onclick="showmenu(this)">
-                <div class="bar1"></div>
-                <div class="bar2"></div>
-                <div class="bar3"></div>
-                <div class="bars">
-                    <div class="d-bar-1"></div>
-                    <div class="d-bar-2"></div>
-                </div>
-            </div>
-        </div>
     </header>
-
-
-    <div class="mobile-nav wrapper-x pos-f fixed-to-top min-height-60-vh">
-        <div class="h-100 bg-white">
-            <ul class="sub-ul none tx-c">
-               <li>
-                    <a href="index.html" class="d-blk p-hh co-richblack">
-                        Home
-                    </a>
-                </li>
-                <li>
-                    <a class="d-blk p-hh co-richblack">
-                        About
-                    </a>
-                </li>
-                <li>
-                    <a href="work.html" class="d-blk p-hh co-richblack">
-                        Work
-                    </a>
-                </li>
-                <li>
-                    <a href="writing.html" class="d-blk p-hh co-richblack">
-                        Writing
-                    </a>
-                </li>
-                <li>
-                    <a href="contact.html" class="d-blk p-hh co-richblack">
-                        Contact
-                    </a>
-                </li>
-            </ul>
-            <p class="px-1 pb-h co-richblack hometext">
-                This website was built with <a href="http://gatsbyjs.org" class="co-primary fw-bold">Gatsby.js</a> and is currently hosted on <a href="http://netlify.com" class="co-primary fw-bold">Netlify</a>. The source code and other assets can be found on <a href="http://github.com" class="co-primary fw-bold">Github</a>.
-            </p>
-            <p class="px-1 tx-c co-richblack hometext">
-                Copyright &copy; 2019. Copyright Dennis Dickson. All Rights Reserved.
-            </p>
-        </div>
-    </div>
 
 
 
     <main>
-        <section class="width-100-pc hide-flow-x">
+        <section class="width-100-pc hide-flow-x mt-2">
             <div class="wrapper grid-2 maxwidth-sl mx-auto">
                 <div class="p-1 d-flx flex-dir-col j-c-c al-i-c pos-r mb-2 min-h-80">
                     <div class="absolute-middle">
@@ -162,7 +98,6 @@
                     <p>Artifex gravitate inliberali denique Albucius iudicium exultat proprius: Artifex gravitate inliberali denique Albucius iudicium exultat proprius:</p>
                     <h3 class="mb-h">Development</h3>
                     <p>Artifex gravitate inliberali denique Albucius iudicium exultat proprius: Artifex gravitate inliberali denique Albucius iudicium exultat proprius:</p>
-                
                 </div>
             </div>
 
