modified the work page

--- a/about.html
+++ b/about.html
@@ -93,24 +93,22 @@
                 </div>
                 <div>
                     <h3 class="mb-h">Core</h3>
-                    <p>Artifex gravitate inliberali denique Albucius iudicium exultat proprius: Artifex gravitate inliberali denique Albucius iudicium exultat proprius:</p>
-                    <h3 class="mb-h">Design</h3>
-                    <p>Artifex gravitate inliberali denique Albucius iudicium exultat proprius: Artifex gravitate inliberali denique Albucius iudicium exultat proprius:</p>
-                    <h3 class="mb-h">Development</h3>
-                    <p>Artifex gravitate inliberali denique Albucius iudicium exultat proprius: Artifex gravitate inliberali denique Albucius iudicium exultat proprius:</p>
+                    <p>Tonye Dickson is a product designer specializing in interface design, web interface development and user experience design.</p>
+                    <h3 class="mb-h">Design & Development</h3>
+                    <p>He makes use of a variety of tools and software to bring better experiences to people one the web. This touches how people use the web everyday, with careful thought given to accessiblity and usability of digital web products.</p>
                 </div>
             </div>
 
             <div class="clearfix maxwidth-sl mx-auto">
-                <div class="right-20 wrapper">
+                <div class="right-30 wrapper">
                     <img src="img/pic.jpg" class="w-100 about-height" alt="">
                 </div>
-                <div class="left-80 wrapper">
+                <div class="left-70 wrapper">
                     <p>
-                        Artifex gravitate inliberali denique Albucius iudicium exultat proprius: Locatus naturalem dicturum sermone ac maluisti dolemus disciplina utinam evertunt potiendi conquirendae Euripidis distinguantur. Inermis fuit legendus constringendos legantur familiari firmitatem timiditatem sedentis malivoli deorsus atomus convincere Qui ruinae sapientiam, Discordiae adiungimus gloriae illum eisque assidua infimum postulet doctrinis adest stulti invidus patiatur appellant conciliant putamus, Plus angore concursio mollis ei iudiciorumque atomis Stoicis nullo sua culpa derigatur cogitavisse studiis dicebas divitias molestiae  deserunt at.
+                        Artifex gravitate inliberali denique Albucius iudicium exultat proprius: Locatus naturalem dicturum sermone ac maluisti dolemus disciplina utinam evertunt potiendi conquirendae Euripidis distinguantur. Inermis fuit legendus constringendos legantur familiari firmitatem timiditatem sedentis malivoli deorsus atomus convincere Qui ruinae sapientiam, Discordiae adiungimus gloriae illum eisque assidua infimum postulet doctrinis adest stulti invidus patiatur appellant conciliant putamus, Plus angore concursio.
                     </p>
                     <p>
-                        Videatur vias de occulte levis illud quasi conciliant perturbari benivolentiam praetermittenda damna reprehensiones solent sapientiamque omnem . Eligendi nullae intus existimare scribimus dicemus gravis Romanum secutus ultimum. Terminari Octavio ipsis male interdictum ab incurrunt intemperantes certa Graeci Neque tradidisse molestiam accedere praesidium M'.que superstitio beate obiecta dici; Flagitem Platonem si nisi voluptatibus ipsa dixi solum fingi adduci seditiones illam earumque efficiantur atomorum! Inveneris faciant elaborare nos maerores sapientiam parvos mollitia, Loqueretur acute convenire confidam dissidens dolore laus Polyaeno stultus Latinam effecerit fruuntur: Declinatio Torquatis stulti perpauca explentur accurate admirer certa utinam plerumque levius solida infinitum splendido quieti.
+                        Videatur vias de occulte levis illud quasi conciliant perturbari benivolentiam praetermittenda damna reprehensiones solent sapientiamque omnem . Eligendi nullae intus existimare scribimus dicemus gravis Romanum secutus ultimum. Terminari Octavio ipsis male interdictum ab incurrunt intemperantes certa Graeci Neque tradidisse molestiam accedere praesidium M'.que superstitio beate obiecta dici; Flagitem Platonem si nisi voluptatibus ipsa dixi solum fingi adduci seditiones .
                     </p>
                 </div>
             </div>
