--- a/work.html
+++ b/work.html
@@ -82,26 +82,151 @@
         <section class="width-100-pc hide-flow-x writing-m-top">
             <div class="maxwidth-sl mx-auto wrapper tx-c h-100">
                 <div class="grid is-multi-col mostly-3">
-                    <a href="eyowo.html" class="work-item d-flx flex-dir-col al-i-c j-c-c p-2">
-                        <img src="img/eyowo.png" class="w-link" alt="Eyowo logo">
-                        <p class="pt-1 co-richblack">Design/Development</p>
-                    </a>
-                    <a href="cpc.html" class="work-item d-flx flex-dir-col al-i-c j-c-c p-2">
-                        <img src="img/cpc.png" class="w-link" alt="CPC logo">
-                        <p class="pt-1 co-richblack">Design/Development</p>
-                    </a>
-                    <a href="swinvoice.html" class="work-item d-flx flex-dir-col al-i-c j-c-c p-2">
-                        <img src="img/swinvoice.png" class="w-link" alt="Swinvoice logo">
-                        <p class="pt-1 co-richblack">Design/Development</p>
-                    </a>
-                    <a href="festivesave.html" class="work-item d-flx flex-dir-col al-i-c j-c-c p-2">
-                        <img src="img/festivesave.png" class="w-link" alt="Festivesave">
-                        <p class="pt-1 co-richblack">Design</p>
-                    </a>
-                    <a href="monetran.html" class="work-item d-flx flex-dir-col al-i-c j-c-c p-2">
-                        <img src="img/monetran.png" class="w-link" alt="Monetran logo">
-                        <p class="pt-1 co-richblack">Design/Development</p>
-                    </a>
+                    <div class="work-item p-2">
+                        <a href="">
+                            <img src="img/eyowo.png" class="w-link" alt="Eyowo logo">
+                        </a>
+                        <div class="pt-1 co-richblack tx-l">
+                            <h3>Eyowo</h3>
+                            <div>
+                                <dl class="mb-1">
+                                    <dt class="fw-bold">Product Category</dt>
+                                    <dd>Finance and Technology</dd>
+                                </dl>
+                                <dl class="mb-1">
+                                    <dt class="fw-bold">Role</dt>
+                                    <dd>UI/UX Designer</dd>
+                                </dl>
+                                <dl class="mb-1">
+                                    <dt class="fw-bold">Responsibilities</dt>
+                                    <dd>User Experience Design</dd>
+                                    <dd>User Interface Design</dd>
+                                    <dd>User Interface Development</dd>
+                                </dl>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="work-item p-2">
+                        <a href="http://cpc.gov.ng" class="">
+                            <img src="img/cpc.png" class="w-link" alt="CPC logo">
+                        </a>
+                        <div class="pt-1 co-richblack tx-l">
+                            <h3>CPC</h3>
+                            <div>
+                                <dl class="mb-1">
+                                    <dt class="fw-bold">Category</dt>
+                                    <dd>Government</dd>
+                                </dl>
+                                <dl class="mb-1">
+                                    <dt class="fw-bold">Role</dt>
+                                    <dd>UI/UX Designer</dd>
+                                </dl>
+                                <dl class="mb-1">
+                                    <dt class="fw-bold">Responsibilities</dt>
+                                    <dd>User Experience Design</dd>
+                                    <dd>User Interface Design</dd>
+                                    <dd>User Interface Development</dd>
+                                </dl>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="work-item p-2">
+                        <a href="" class="">
+                            <img src="img/harbor.svg" class="w-link" alt="CPC logo">
+                        </a>
+                        <div class="pt-1 co-richblack tx-l">
+                            <h3>Harbor Incubator</h3>
+                            <div>
+                                <dl class="mb-1">
+                                    <dt class="fw-bold">Category</dt>
+                                    <dd>Solutions</dd>
+                                </dl>
+                                <dl class="mb-1">
+                                    <dt class="fw-bold">Role</dt>
+                                    <dd>UI/UX Designer</dd>
+                                </dl>
+                                <dl class="mb-1">
+                                    <dt class="fw-bold">Responsibilities</dt>
+                                    <dd>User Experience Design</dd>
+                                    <dd>User Interface Design</dd>
+                                    <dd>User Interface Development</dd>
+                                </dl>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="work-item p-2">
+                        <a href="" class="">
+                            <img src="img/swinvoice.png" class="w-link" alt="SWInvoice logo">
+                        </a>
+                        <div class="pt-1 co-richblack tx-l">
+                            <h3>SWinvoice</h3>
+                            <div>
+                                <dl class="mb-1">
+                                    <dt class="fw-bold">Category</dt>
+                                    <dd>Cryptocurrency and Payments</dd>
+                                </dl>
+                                <dl class="mb-1">
+                                    <dt class="fw-bold">Role</dt>
+                                    <dd>UI/UX Designer</dd>
+                                </dl>
+                                <dl class="mb-1">
+                                    <dt class="fw-bold">Responsibilities</dt>
+                                    <dd>User Experience Design</dd>
+                                    <dd>User Interface Design</dd>
+                                    <dd>User Interface Development</dd>
+                                </dl>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="work-item p-2">
+                        <a href="" class="">
+                            <img src="img/festivesave.png" class="w-link" alt="Festivesave logo">
+                        </a>
+                        <div class="pt-1 co-richblack tx-l">
+                            <h3>Festivesave</h3>
+                            <div>
+                                <dl class="mb-1">
+                                    <dt class="fw-bold">Category</dt>
+                                    <dd>Finance and Technology</dd>
+                                </dl>
+                                <dl class="mb-1">
+                                    <dt class="fw-bold">Role</dt>
+                                    <dd>Product Designer</dd>
+                                </dl>
+                                <dl class="mb-1">
+                                    <dt class="fw-bold">Responsibilities</dt>
+                                    <dd>User Experience Design</dd>
+                                    <dd>User Interface Design</dd>
+                                    <dd>User Interface Development</dd>
+                                </dl>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="work-item p-2">
+                        <a href="" class="">
+                            <img src="img/monetran.png" class="w-link" alt="Monetran logo">
+                        </a>
+                        <div class="pt-1 co-richblack tx-l">
+                            <h3>Monetran</h3>
+                            <div>
+                                <dl class="mb-1">
+                                    <dt class="fw-bold">Category</dt>
+                                    <dd>Cryptocurrency and Payments</dd>
+                                </dl>
+                                <dl class="mb-1">
+                                    <dt class="fw-bold">Role</dt>
+                                    <dd>UI/UX Designer</dd>
+                                </dl>
+                                <dl class="mb-1">
+                                    <dt class="fw-bold">Responsibilities</dt>
+                                    <dd>User Experience Design</dd>
+                                    <dd>User Interface Design</dd>
+                                    <dd>User Interface Development</dd>
+                                </dl>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </section>
