modified the work page

--- a/about.html
+++ b/about.html
@@ -100,19 +100,27 @@
             </div>
 
             <div class="clearfix maxwidth-sl mx-auto">
-                <div class="right-30 wrapper">
+                <div class="right-50 wrapper">
                     <img src="img/pic.jpg" class="w-100 about-height" alt="">
                 </div>
-                <div class="left-70 wrapper">
+                <div class="left-50 wrapper">
                     <p>
-                        Artifex gravitate inliberali denique Albucius iudicium exultat proprius: Locatus naturalem dicturum sermone ac maluisti dolemus disciplina utinam evertunt potiendi conquirendae Euripidis distinguantur. Inermis fuit legendus constringendos legantur familiari firmitatem timiditatem sedentis malivoli deorsus atomus convincere Qui ruinae sapientiam, Discordiae adiungimus gloriae illum eisque assidua infimum postulet doctrinis adest stulti invidus patiatur appellant conciliant putamus, Plus angore concursio.
+                        I’m Tonye – a product designer, developer, and a design advocate.
                     </p>
                     <p>
-                        Videatur vias de occulte levis illud quasi conciliant perturbari benivolentiam praetermittenda damna reprehensiones solent sapientiamque omnem . Eligendi nullae intus existimare scribimus dicemus gravis Romanum secutus ultimum. Terminari Octavio ipsis male interdictum ab incurrunt intemperantes certa Graeci Neque tradidisse molestiam accedere praesidium M'.que superstitio beate obiecta dici; Flagitem Platonem si nisi voluptatibus ipsa dixi solum fingi adduci seditiones .
+                        It was shortly after I started working with a company a few years ago, when I discovered that there was something lacking in how digital products were being designed, developed, and deployed. Of course, I tried to fix what I could but realized I needed to do more to change a lot. That was when I started making the web better one product at a time.
+                    </p>
+                    <p>
+                        In 2018, I started publishing my ideas publicly, writing independently, creating content for my blog, and contributing to the design and development community.
+                    </p>
+                    <p>
+                        Sometimes, when I'm asked why I do what I so, I give a simple answer: I wish to uphold web standards and make content on the internet more accessible to everyone.
+                    </p>
+                    <p>
+                        Because, really, the internet shouldn't be a messy place to navigate around.
                     </p>
                 </div>
             </div>
-
         </section>
     </main>
 
