added footer and something else

--- a/index.html
+++ b/index.html
@@ -80,11 +80,8 @@
                     <div class="min-height-60-vh h-100 bg-pic">
                         <div class="bg-t-white w-100 h-100 d-flx flex-dir-col j-c-fe">
                             <div class="bg-t-black px-1 pt-1 pb-3">
-                                <p class="co-white hometext mb-h">
-                                    Hi, I’m Tonye. I’m an enthusiastic designer and frontend developer contrubuting to make the web better, one product at a time.
-                                </p>
-                                <p class="co-white hometext mb-h">
-                                    Shortly after I began writing articles here and have continued writing articles
+                                <p class="co-white hometext mb-2">
+                                    Hi, I’m Tonye. I’m a product designer and developer contrubuting to make the web better, one product at a time.
                                 </p>
                             </div>
                         </div>
